--- a/templates/services.html
+++ b/templates/services.html
@@ -35,7 +35,7 @@
                     <div class="left1">
                         <div class="service-name-box">
                             <img src="{{ url_for('static', filename='img/services/icon-3.png') }}" alt="">
-                            <a href="">Delivery Services</a>
+                            <a href="/service/delivery">Delivery Services</a>
                         </div>
                         <p class="prod">
                             Sed ut perspiciatis unde omnis iste natus error sit voluptat accusantium doloremqlaudantium. Sed ut perspiciatis
@@ -51,7 +51,7 @@
                         <div class="right1">
                             <div class="service-name-box">
                                 <img src="{{ url_for('static', filename='img/services/icon-4.png') }}" alt="">
-                                <a href="">Agricultural Services</a>
+                                <a href="/service/agricultural">Agricultural Services</a>
                             </div>
                             <p class="prod">
                                 Sed ut perspiciatis unde omnis iste natus error sit voluptat accusantium doloremqlaudantium. <br> Sed ut perspiciatis.
@@ -60,7 +60,7 @@
                         <div class="right1">
                             <div class="service-name-box">
                                 <img src="{{ url_for('static', filename='img/services/icon-5.png') }}" alt="">
-                                <a href="">Organic Products</a>
+                                <a href="/service/products">Organic Products</a>
                             </div>
                             <p class="prod">
                                 Sed ut perspiciatis unde omnis iste natus error sit voluptat accusantium doloremqlaudantium. <br> Sed ut perspiciatis.
@@ -69,7 +69,7 @@
                         <div class="right1">
                             <div class="service-name-box">
                                 <img src="{{ url_for('static', filename='img/services/icon-6.png')}}" alt="">
-                                <a href="">Fresh Vegetables</a>
+                                <a href="/service/fresh_vegetables">Fresh Vegetables</a>
                             </div>
                             <p class="prod">
                                 Sed ut perspiciatis unde omnis iste natus error sit voluptat accusantium doloremqlaudantium. <br> Sed ut perspiciatis.
