--- a/templates/Base.html
+++ b/templates/Base.html
@@ -31,7 +31,7 @@
                         <a href="{{ url_for('about') }}" class="text-nav">About</a>
                         <!-- select box -->
                         <div class="select-box">
-                            <a href="#" class="text-nav menu__link">Pages<span class="menu__arrow"></span></a>
+                            <a href="#" class="text-nav menu__link">Pages<span class="menu__arrow arrow"></span></a>
                             <div class="sub-menu__list">
                                 {% for url, name in pages -%}
                                 <a href="{{ url_for(url) }}" class="select-box-menu-list-item">{{ name }}</a>
@@ -103,22 +103,25 @@
             <!------------------------------------------------------------------------------>
 
             <!------------------------------- footer about site box ------------------------>
-            <div class="default-site-footer-box">
-                <div class="footer-content-box text-align-end">
-                    <h1 class="footer-h1">Contact Us</h1>
-                    <div class="footer-text-box">
-                        <span class="footer-span">Email</span>
-                        <a href="mailto:needhelp@Organia.com" class="footer-p">needhelp@Organia.com</a>
+            <div class="default-site-footer-box vertical-footer">
+                {% macro default_footer(class_name)%}
+                    <div class="{{ class_name }}">
+                        <h1 class="footer-h1">Contact Us</h1>
+                        <div class="footer-text-box">
+                            <span class="footer-span">Email</span>
+                            <a href="mailto:needhelp@Organia.com" class="footer-p">needhelp@Organia.com</a>
+                        </div>
+                        <div class="footer-text-box">
+                            <span class="footer-span">Phone</span>
+                            <a href="tel:+666 888 888" class="footer-p">666 888 888</a>
+                        </div>
+                        <div class="footer-text-box">
+                            <span class="footer-span">Address</span>
+                            <a href="" class="footer-p">88 road, borklyn street, USA</a>
+                        </div>
                     </div>
-                    <div class="footer-text-box">
-                        <span class="footer-span">Phone</span>
-                        <a href="tel:+666 888 888" class="footer-p">666 888 888</a>
-                    </div>
-                    <div class="footer-text-box">
-                        <span class="footer-span">Address</span>
-                        <a href="" class="footer-p">88 road, borklyn street, USA</a>
-                    </div>
-                </div>
+                {% endmacro %}
+                {{ default_footer('footer-content-box text-align-end') }}
                 <div class="footer-vertical-hr"></div>
                 <div class="footer-content-box text-align-center">
                     <div class="site-logo-box-foot" id="small-logo-box">
@@ -138,14 +141,17 @@
                     </div>
                 </div>
                 <div class="footer-vertical-hr"></div>
-                <div class="footer-content-box text-align-start">
-                    <h1 class="footer-h1">Utility Pages</h1>
-                    <div class="footer-text-box-2">
-                        <!-- <a href="" class="footer-p">Style Guide</a> -->
-                        <a href="{{ url_for('not_found') }}" class="footer-p">404 Not Found</a>
-                        <a href="{{ url_for('password') }}" class="footer-p">Password Protected</a>
-                        <a href="{{ url_for('licenses') }}" class="footer-p">Licenses</a>
-                        <a href="{{ url_for('change_log') }}" class="footer-p">Changelog</a>
+                <div class="footer-to-mobile-box">
+                    {{ default_footer('footer-content-box text-align-end display-none') }}
+                    <div class="footer-content-box text-align-start">
+                        <h1 class="footer-h1">Utility Pages</h1>
+                        <div class="footer-text-box-2">
+                            <!-- <a href="" class="footer-p">Style Guide</a> -->
+                            <a href="{{ url_for('not_found') }}" class="footer-p">404 Not Found</a>
+                            <a href="{{ url_for('password') }}" class="footer-p">Password Protected</a>
+                            <a href="{{ url_for('licenses') }}" class="footer-p">Licenses</a>
+                            <a href="{{ url_for('change_log') }}" class="footer-p">Changelog</a>
+                        </div>
                     </div>
                 </div>
             </div>
